Data preparation Exercise submission

--- a/Numpy_Assignments/Numpy_Assignments.ipynb
+++ b/Numpy_Assignments/Numpy_Assignments.ipynb
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
    "source": [
     "arr2 = np.zeros(10)\n",
     "arr2[4] = 1\n",
-    "print(arr_2)"
+    "print(arr2)"
    ]
   },
   {
