--- a/Pandas_Assignments/world_food_facts.ipynb
+++ b/Pandas_Assignments/world_food_facts.ipynb
@@ -4,14 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ex1 - Getting and knowing your Data\n",
-    "Check out [World Food Facts Exercises Video Tutorial](https://youtu.be/_jCSK4cMcVw) to watch a data scientist go through the exercises"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Step 1. Go to https://www.kaggle.com/openfoodfacts/world-food-facts/data"
    ]
   },
@@ -24,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -50,8 +42,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "//anaconda/lib/python2.7/site-packages/IPython/core/interactiveshell.py:2717: DtypeWarning: Columns (0,3,5,19,20,24,25,26,27,28,36,37,38,39,48) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+      "C:\\Users\\FAISAL\\AppData\\Local\\Temp\\ipykernel_13512\\1621647536.py:1: DtypeWarning: Columns (0,3,5,19,20,24,25,26,27,28,36,37,38,39,48) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  food = pd.read_csv('~/Desktop/en.openfoodfacts.org.products.tsv', sep='\\t')\n"
      ]
     }
    ],
@@ -75,6 +67,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -250,12 +255,12 @@
        "3      1489055731   2017-03-09T10:35:31Z          Organic Salted Nut Mix   \n",
        "4      1489055653   2017-03-09T10:34:13Z                 Organic Polenta   \n",
        "\n",
-       "  generic_name quantity         ...         fruits-vegetables-nuts_100g  \\\n",
-       "0          NaN      1kg         ...                                 NaN   \n",
-       "1          NaN      NaN         ...                                 NaN   \n",
-       "2          NaN      NaN         ...                                 NaN   \n",
-       "3          NaN      NaN         ...                                 NaN   \n",
-       "4          NaN      NaN         ...                                 NaN   \n",
+       "  generic_name quantity  ... fruits-vegetables-nuts_100g  \\\n",
+       "0          NaN      1kg  ...                         NaN   \n",
+       "1          NaN      NaN  ...                         NaN   \n",
+       "2          NaN      NaN  ...                         NaN   \n",
+       "3          NaN      NaN  ...                         NaN   \n",
+       "4          NaN      NaN  ...                         NaN   \n",
        "\n",
        "  fruits-vegetables-nuts-estimate_100g collagen-meat-protein-ratio_100g  \\\n",
        "0                                  NaN                              NaN   \n",
@@ -387,15 +392,15 @@
     {
      "data": {
       "text/plain": [
-       "Index([u'code', u'url', u'creator', u'created_t', u'created_datetime',\n",
-       "       u'last_modified_t', u'last_modified_datetime', u'product_name',\n",
-       "       u'generic_name', u'quantity',\n",
+       "Index(['code', 'url', 'creator', 'created_t', 'created_datetime',\n",
+       "       'last_modified_t', 'last_modified_datetime', 'product_name',\n",
+       "       'generic_name', 'quantity',\n",
        "       ...\n",
-       "       u'fruits-vegetables-nuts_100g', u'fruits-vegetables-nuts-estimate_100g',\n",
-       "       u'collagen-meat-protein-ratio_100g', u'cocoa_100g', u'chlorophyl_100g',\n",
-       "       u'carbon-footprint_100g', u'nutrition-score-fr_100g',\n",
-       "       u'nutrition-score-uk_100g', u'glycemic-index_100g',\n",
-       "       u'water-hardness_100g'],\n",
+       "       'fruits-vegetables-nuts_100g', 'fruits-vegetables-nuts-estimate_100g',\n",
+       "       'collagen-meat-protein-ratio_100g', 'cocoa_100g', 'chlorophyl_100g',\n",
+       "       'carbon-footprint_100g', 'nutrition-score-fr_100g',\n",
+       "       'nutrition-score-uk_100g', 'glycemic-index_100g',\n",
+       "       'water-hardness_100g'],\n",
        "      dtype='object', length=163)"
       ]
      },
@@ -534,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
